First commited as before_46289_rev1