@@ -24,6 +24,11 @@ public class StringToByteConverterTest extends TestCase {
 	private NumberFormat numberFormat;
 	private StringToByteConverter converter;
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see junit.framework.TestCase#setUp()
+	 */
 	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
@@ -65,7 +70,7 @@ public class StringToByteConverterTest extends TestCase {
 	public void testThrowsIllegalArgumentExceptionIfAskedToConvertNonString()
 			throws Exception {
 		try {
-			converter.convert(Integer.valueOf(1));
+			converter.convert(new Integer(1));
 			fail("exception should have been thrown");
 		} catch (IllegalArgumentException e) {
 		}
